--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>common</module>
         <module>common/service_base</module>
         <module>service_wxlogin</module>
+        <module>infrastructure</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
