--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,7 @@
         <module>service_ucenter</module>
         <module>service_wxlogin</module>
         <module>service_order</module>
+        <module>service_statistics</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
@@ -139,6 +140,12 @@
             <groupId>com.atguigu</groupId>
             <artifactId>common_utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!--服务配置-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
     </dependencies>
 
